# anime-tracker

./: .env  Cargo.toml  db_setup.sh  diesel.toml
crates/app/: Cargo.toml
crates/app/src/: errors.rs  lib.rs  server.rs  storage.rs  utils.rs
crates/app/src/server/: admin.rs  users.rs
crates/app/src/storage/: db.rs  postgre.rs  schema.rs  terminal.rs  types.rs
crates/app/src/storage/db/: animes.rs  user_anime_rel.rs  users.rs
crates/app/src/storage/postgre/: user_anime_rel.rs  users.rs
crates/app/src/storage/types/: animes.rs  user_anime_rel.rs  users.rs
crates/unstable_crib/: Cargo.toml
crates/unstable_crib/src/: lib.rs
migrations/2023-04-22-200454_create-tables/: down.sql  up.sql
