[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "*"
error-stack = "0.3.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
diesel = { version = "2.0.4", features = ["postgres", "serde_json"] }
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
time = "0.3.20"
uuid = { version = "1.3.1", features = [ "fast-rng", "v4" ] }
thiserror = "1.0.40"
